--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ main{
     color: white;
     font-size: 25px;
     text-shadow: 3px 2px #000000;
-    font-family: cursive;
+    font-family: Jacques Francois Shadow;
     font-weight: bolder;
 }
 .banner_text h2 a{
