--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    max-width: 100%;
 }
 .header{
     background-color: #4e5550;
@@ -57,6 +58,7 @@ main{
     text-shadow: 3px 2px #000000;
     font-family: Jacques Francois Shadow;
     font-weight: bolder;
+
 }
 .banner_text h2 a{
     text-decoration: none;
@@ -80,7 +82,7 @@ main{
     min-height: 500px;
     padding: 10px ;
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+    grid-template-columns: repeat(4,1fr);
     grid-gap: 12px;
 }
 
@@ -143,15 +145,58 @@ footer .heading{
 }
 
 
-@media (max-width:1300px){
+
+ /* Extra small devices (phones, 600px and down) */
+ @media only screen and (max-width: 600px) {
+    .content {
+        grid-template-columns: repeat(1,1fr);
+    }
     .banner{
-        background-position: 63%;
-        padding-left: 8px;
+        background-position-x: 63%;
     }
     .banner_text{
         text-align: left;
-        padding-top: 150px;
-
+        padding-top: 150px;  
     }
-}
-
+        
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    .content {
+        grid-template-columns: repeat(2,1fr);
+    }
+    .banner{
+        background-position-x: 80%;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    .content {
+        grid-template-columns: repeat(2,1fr);
+    }
+    .banner{
+        background-position-x: 88%;
+    }
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    .content {
+        grid-template-columns: repeat(4,1fr);
+    }
+    .banner{
+        background-position-x: 59%;
+    }
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    .content {
+        grid-template-columns: repeat(4,1fr);
+    }
+    .banner{
+        background-position-x: 86%;
+    }
+  }
