--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     
 }
 h1{
+    margin-top: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-size: 45px;
     color: red;
