--- a/style.css
+++ b/style.css
@@ -6,6 +6,12 @@ body{
    
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     max-width: 100%;
+    
+}
+header{
+    position: sticky;
+    top: 0;
+    z-index: 2;
 }
 .header{
     background-color: #4e5550;
@@ -112,7 +118,7 @@ main{
 .description{
     min-height: 50px;
     width: 100%;
-    margin: 10px;
+    margin: 10px 0px;
 }
 .description p{
     text-align: center;
@@ -156,6 +162,9 @@ footer .heading{
     .content {
         grid-template-columns: repeat(1,1fr);
     }
+    .header{
+        height: 90px;
+    }
     .banner{
         background-position-x: 63%;
     }
@@ -163,7 +172,10 @@ footer .heading{
         text-align: left;
         padding-top: 150px;  
     }
-        
+    .banner h1{
+        margin-top: 10px;
+    }
+       
   }
   
   /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -208,5 +220,4 @@ footer .heading{
     .banner{
         background-position-x: 86%;
     }
-     .banner_text{margin-left: 140px;}
   } 
